--- a/index.html
+++ b/index.html
@@ -289,7 +289,11 @@
 
 
    <section class="carousel-wrapper">
-    <h1>Photo <span>Gallery</span></h1>
+     <div class="me-container">
+           <h1>OJT <span>Gallery</span></h1>
+        <hr class="ojt-hr">
+        <p class="services-p">Here are the services that I offer to people that they find interesting. </p> 
+    </div>
     <div class="carousel" id="carousel">
       <div class="carousel-track">
         <!-- Repeat these image items -->
