--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
      <div class="me-container">
            <h1>OJT <span>Gallery</span></h1>
         <hr class="ojt-hr">
-        <p class="services-p">Here are the services that I offer to people that they find interesting. </p> 
-    </div>
+        <p class="services-p">Highlights of tasks and experiences from my OJT that showcase the skills I applied and developed.</p>     
+     </div>
     <div class="carousel" id="carousel">
       <div class="carousel-track">
         <!-- Repeat these image items -->
